# hearth

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANUAL_SMOKE.md  Makefile  README.md  config.yaml  default-config.yaml  env.example  install.sh  opencode.json  pyproject.toml  start.sh  verify_calendar.py  verify_wikipedia.py
.claude/: fledge-adapter.md  team-loop.md
.claude/agents/: fledge-brooder.md  fledge-context-scout.md  fledge-forager.md  fledge-skua.md
.fledge/: scaffold.json
.fledge/molt/: FTHR-001.md  FTHR-002.md  FTHR-003.md  FTHR-004.md  FTHR-005.md  FTHR-006.md  FTHR-007.md  FTHR-008.md  FTHR-009.md  FTHR-010.md  FTHR-011.md  FTHR-012.md  FTHR-013.md  FTHR-014.md  FTHR-015.md  FTHR-016.md  FTHR-017.md  FTHR-018.md  FTHR-019.md  FTHR-020.md  FTHR-021.md  FTHR-022.md  FTHR-023.md  FTHR-024.md  FTHR-025.md  FTHR-026.md  FTHR-027.md  FTHR-028.md  FTHR-029.md  FTHR-030.md  FTHR-031.md  FTHR-032.md  FTHR-035.md  FTHR-036.md  FTHR-037.md
.fledge/nest/: architecture.md  conventions.md  data-model.md  dependencies.md  domain.md  entry-points.md  index.md  modules.md  testing.md
.github/workflows/: release.yml
assistant/: __init__.py  app.py  bootstrap.py
assistant/audio/: aec.py  base.py  devices.py  earcon.py  mic_hub.py  processing.py  recorder.py  sounddevice_io.py
assistant/calendar/: base.py  blocklist.py  extraction.py  google_calendar.py
assistant/connectivity/: base.py
assistant/core/: arbiter.py  config.py  control.py  conversation.py  events.py  logging.py  orchestrator.py  persona.py  pipeline.py  revoice.py  selfupdate.py  speech.py  standdown.py  state.py  verify.py
assistant/llm/: base.py  fallback_provider.py  ollama_provider.py  openai_compatible_provider.py  opencode_zen_provider.py
assistant/nlu/: classifier_router.py  command_router.py  keyphrase_router.py  router.py  timespec.py
assistant/scheduling/: calendar_watcher.py  scheduler.py
assistant/search/: __init__.py  base.py  ddgs_provider.py  exa.py  multi.py  tavily.py  wikipedia.py
assistant/skills/: base.py  calendar.py  clock.py  general.py  reminder.py  stand_down.py  timer.py  update.py  weather.py  web_search.py
assistant/storage/: calendar_state.py  reminders.py
assistant/stt/: base.py  faster_whisper_stt.py
assistant/sync/: base.py
assistant/tts/: base.py  piper_tts.py
assistant/tui/: __main__.py  app.py  config_schema.py  discovery.py  logcolor.py  supervisor.py
assistant/wake/: base.py  livekit_detector.py  openwakeword_detector.py  registry.py
assistant/weather/: __init__.py  base.py  open_meteo.py
config/: audio.yaml  chat.yaml  engine.yaml
config/defaults/: audio.yaml  chat.yaml  engine.yaml
docs/: compass_artifact_wf-d2e1e07d-970c-49a9-8508-721205c9d97f_text_markdown.md  verification-loop-and-llm-tui-plan.md
hearth/: __init__.py  app.py  config.py  events.py  logging_setup.py  loop.py  persona.py  transcript.py
hearth/audio/: __init__.py  config.py  endpoint.py  render.py  source.py  stages.py  surface.py  transcribe.py  voice.py  wake.py
hearth/brain/: base.py  errors.py  local.py  openai_compat.py  remote.py  router.py
hearth/gateway/: protocol.py  server.py
hearth/memory/: consumer.py  log.py  reader.py
hearth/tools/: consult.py  registry.py  wikipedia.py
hearth/veneer/: client.py  protocol.py  server.py
hearth/veneers/: base.py
models/wake/: calcifer.onnx  hello_penguin.onnx  hey_assistant.onnx  hey_assistant_smoke.onnx  hey_calcifer.onnx  hey_penguin.onnx  models.json  penguin.onnx  penguin_smoke.onnx  vesta.onnx  yo_penguin.onnx
packaging/: assistant.spec  build.sh  entry.py  entrypoint.py
pluma/feathers/: FTHR-001-package-rename-and-config-foundation.md  FTHR-001-self-update-skill-and-restart-in-place-source-mode.md  FTHR-002-core-spine-in-process-tracer.md  FTHR-002-tui-supervisor-survives-in-place-re-exec.md  FTHR-003-tracer-routed-web-search-seam-tavily-provider-end-to-end.md  FTHR-003-veneer-websocket-contract-client-and-daemon.md  FTHR-004-exa-provider-semantic-query-route.md  FTHR-004-router-widening-remote-backend-and-tier-routing.md  FTHR-005-layer-2-read-seam-and-no-op-consumer.md  FTHR-005-tracer-revoicer-seam-voiced-flag-pipeline-choke-point-config-wiring.md  FTHR-006-persona-v2-canned-template-registry.md  FTHR-006-tool-layer-wikipedia-search-and-react-rounds.md  FTHR-007-end-to-end-veneer-integration-test-and-manual-smoke-procedure.md  FTHR-007-template-adoption-llm-free-call-sites-speak-canned-persona-lines.md  FTHR-008-revoice-scheduler-calendar-watcher-announcements.md  FTHR-014-tui-opencode-zen-rename.md  (+7 more)
specs/: mute-for-duration.md  web-search-answers.md
tests/: conftest.py  test_aec.py  test_app.py  test_app_llm_diagnostics.py  test_audio_endpoint.py  test_audio_processing.py  test_audio_render.py  test_audio_source.py  test_audio_speaking.py  test_audio_surface.py  test_audio_transcribe.py  test_audio_voice.py  test_audio_wake.py  test_brain_errors.py  test_brain_guard.py  test_calendar_blocklist.py  test_calendar_extraction.py  test_calendar_skill.py  test_calendar_state_store.py  test_calendar_watcher.py  test_chat.py  test_chat_client.py  test_chat_contract.py  test_classifier_router.py  test_clock_skill.py  test_command_router.py  test_config.py  test_configfile.py  test_console_formatter.py  test_consult_brain.py  test_control.py  test_conversation.py  test_ddgs_provider.py  test_devices.py  test_e2e_gateway.py  test_e2e_veneer.py  test_earcon.py  test_eval_extract.py  test_event_log.py  test_exa_provider.py  (+78 more)
training/: README.md  bootstrap.sh  calcifer.yaml  evaluate.py  make_config.py  manifest.py  phrases.txt  prometheus.yaml  setup_data.py  synth_clips.py  test_manifest.py  train.py  train.sh  train_batch.py  train_batch.sh  train_model.py  ui.py  vesta.yaml  wakeword.yml
tui/: __init__.py  __main__.py  app.py  collapse.py  config_schema.py  configfile.py  discovery.py  envfile.py  logcolor.py  logparse.py  runlog.py  supervisor.py  widgets.py
(+79 files in other folders)
