[project]
name = "personal-assistant"
version = "0.1.0"
description = "Offline-first voice personal assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Per-phase heavy/native deps, installed as each phase lands.
tts = ["piper-tts"]
# openWakeWord 0.6.0 hard-pins tflite-runtime, which has no Python 3.12 wheel.
# We use the ONNX backend instead, so install it with --no-deps (see README):
#   pip install "openwakeword==0.6.0" --no-deps
# Because of --no-deps, this extra carries openWakeWord's own ONNX-path runtime
# deps (everything it needs minus the tflite-runtime pin).
wake = ["onnxruntime", "requests", "scipy", "scikit-learn", "tqdm"]
stt = ["faster-whisper"]
vad = ["webrtcvad", "setuptools<81"]  # webrtcvad imports pkg_resources (removed in setuptools 81)
llm = ["httpx"]  # async HTTP client for the Ollama provider
nlu = ["dateparser"]
scheduling = ["apscheduler"]
search = ["ddgs", "httpx"]  # keyless ddgs scraper + httpx for the keyed Tavily backend
# Monitor TUI: supervises the daemon as a child process. Deliberately NOT in
# `all` — the Pi may run the TUI separately, and it imports no native deps.
tui = ["textual", "httpx"]  # httpx for live Ollama model discovery
dev = ["pytest", "pytest-asyncio", "ruff"]
# Every runtime capability in one shot. Excludes openWakeWord, which must be
# installed with --no-deps (see the `wake` note above).
all = ["personal-assistant[tts,wake,stt,vad,llm,nlu,scheduling,search]"]

[project.scripts]
assistant = "assistant.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["assistant*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
